rpi-ingress/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: services-strip
  namespace: default
spec:
  stripPrefix:
    prefixes:
    - /nginx
